# dotfiles

./: .gitignore  .gitmodules  README.md  dot_installer.bash  lint.bash  pyproject.toml  setup.cfg
.github/actions/setup-poetry/: action.yaml
.github/actions/setup-uv/: action.yaml
.github/workflows/: ci.yaml  linter.yaml
dotfiles/: __init__.py  logics.py  runner.py
dotfiles/resources/: .fvwm2rc  .gdbinit  .gitconfig  .gitconfig.curekoshimizu  .tmux.conf  .tmux.conf.common  .tmux.conf.keybindings  .tmux.conf.linux  .tmux.conf.mac  .tmux.conf.platform  .vimperatorrc  .vimrc  .vimrc.plug  .zshenv  .zshrc  ignore
dotfiles/resources/.template/: template.py  template.py2
dotfiles/resources/nvim/: init.lua  plugin-config.vim
dotfiles/resources/nvim/lua/plugins/: init.lua
dotfiles/resources/template/: template.cpp  template.html  template.py  template.py2
scripts/: installer.py
tests_dotfiles/: test_dotfiles.py  test_logics.py  test_runner.py
