[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles"
version = "0.1.0"
description = "dotfile installer"
authors = [
    { name = "curekoshimizu", email = "45332899+curekoshimizu@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "click==8.3.1",
    "emoji==2.15.0",
    "GitPython==3.1.46",
    "requests==2.32.5",
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "ruff==0.15.4",
    "types-requests==2.32.4.20250913",
]

[tool.mypy]
exclude = [".venv", "__pycache__", ".mypy_cache"]
strict = true
warn_incomplete_stub = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
follow_imports = "normal"
ignore_errors = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.setuptools]
packages = ["dotfiles"]

[tool.ruff]
exclude = [".mypy_cache", ".venv", "dotfiles/resources/.template"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma（ruff formatterと競合）
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D107",    # undocumented-public-init
    "D203",    # incorrect-blank-line-before-class（D211と競合）
    "D213",    # multi-line-summary-second-line（D212と競合）
    "FIX",     # TODOコメント許可
    "B011",    # do-not-assert-false
    "PT015",   # pytest-assert-always-false
    "S101",    # assert使用許可
    "T201",    # CLIツールなのでprint必要
    "TC003",   # typing-only-standard-library-import
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "SLF001",  # private-member-access
]

[tool.ruff.lint.isort]
known-first-party = ["dotfiles"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
